# direct-web-bugs

./: .gitignore  configuration.json  direct-web-bugs.cabal  qmic.cabal  sample-configuration.json  todo.txt
Graphics/: Icons.ai
Haskell/: HTML.hs  Main.hs  REST.hs  SQL.hs
Mockups/: test.html
SQL/: 2013-02-18-initial.sql  2013-02-22-initial.sql
Wireframes/: Irene-proposal.ai
