name: direct-web-bugs
version: 1.0
cabal-version: >= 1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/direct-sqlite/issues/new
category: Web
synopsis: Debugging aid for testing HTTP-based APIs.
Build-type: Simple
description:
  This package runs as a web server which provides a single page at a
  configurable path - go ahead and set it up behind a reverse proxy to
  integrate it into an existing site.  It is optionally secured by a simple
  password, also configured.  The entire installation consists of a single
  statically-linked executable, one short JSON configuration file, and an
  SQLite database contained in a single file which is created at first
  invocation.
  .
  Once installed and loaded into a browser, the package becomes a tool for
  issuing HTTP and HTTPS requests and seeing the detailed responses they
  produce.  The server-side component is used to store history and bookmarks,
  allowing you to easily repeat a request.  Because details are stored
  server-side, you always have your history available, even if you move among
  multiple computers.
  .
  [Version 1.0] Initial release.


Executable direct-web-bugs
  main-is: Main.hs
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.0.2 && < 1,
                 base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 direct-http >= 0.5.2 && < 1,
                 lifted-base >= 0.2.0.2 && < 1,
                 network >= 2.4 && < 3,
                 sqlite-simple >= 0.4.0.0 && < 1,
                 mtl >= 2.1 && < 3,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1
  default-language: Haskell2010
