name: qmic
version: 1.0
cabal-version: >= 1.6
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2013 Irene Knapp
author: Irene Knapp

Executable qmic
  main-is: Main.hs
  hs-source-dirs: Haskell
  build-depends: aeson >= 0.6.0.2 && < 1,
                 base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1 && < 1,
                 containers >= 0.4.2.1 && < 1,
                 direct-http >= 0.5.1 && < 1,
                 network >= 2.4 && < 3,
                 sqlite-simple >= 0.4.0.0 && < 1,
                 mtl >= 2.1 && < 3,
                 system-uuid >= 2.1.1 && < 3,
                 text >= 0.11.2.1 && < 1
